--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@nuxtjs/tailwindcss": "^3.4.1",
     "nuxt": "^2.14.12",
     "nuxt-i18n": "^6.16.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/fontawesome": "^1.1.2"
   }
 }
