--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@nuxtjs/tailwindcss": "^3.4.1",
-    "nuxt": "^2.14.12",
-    "nuxt-i18n": "^6.16.0"
-  },
-  "devDependencies": {
-    "@nuxtjs/fontawesome": "^1.1.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/vue-fontawesome": "2.0.0",
+    "@nuxtjs/tailwindcss": "3.4.2",
+    "nuxt": "2.15.8",
+    "nuxt-i18n": "6.16.0",
+    "@nuxtjs/fontawesome": "1.1.2"
   },
   "name": "hebamme-jana-goellner",
   "private": true,
