--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.0.5",
+    "react-markdown": "^10.0.1",
     "react-qr-code": "^2.0.13",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
+    "react-transition-group": "^4.4.5",
     "vite-tsconfig-paths": "^4.3.2",
     "zustand": "^4.5.2"
   },
@@ -29,6 +31,7 @@
     "@digitalroute/cz-conventional-changelog-for-jira": "^8.0.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-transition-group": "^4.4.12",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
