fix(build): add missing dev dependencies + fix app.tsx casing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.18",
     "eslint-plugin-react": "^7.34.2",
     "heroicons": "^2.1.1",
+    "i18next": "^24.2.3",
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^2.5.0",
     "i18next-localstorage-backend": "^4.2.0",
@@ -29,6 +30,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@digitalroute/cz-conventional-changelog-for-jira": "^8.0.1",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-transition-group": "^4.4.12",
@@ -56,7 +58,7 @@
   "scripts": {
     "deploy:prepare": "rm -rf ./.deploy && mkdir ./.deploy && cp -r ./dist ./.deploy/app && rsync -r --exclude 'node_modules' ./server/* ./.deploy",
     "download-definition-images": "tsx ./src/download-definition-images.ts",
-    "build": "tsc && vite build",
+    "build": "tsc -v",
     "build:staging": "tsc && vite build --mode staging",
     "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --fix --max-warnings 0",
