--- a/package.json
+++ b/package.json
@@ -55,12 +55,13 @@
     "vite": "^5.1.7"
   },
   "name": "homepage-jana-goellner",
+  "packageManager": "pnpm@9.13.0",
   "scripts": {
-    "deploy:prepare": "rm -rf ./.deploy && mkdir ./.deploy && cp -r ./dist ./.deploy/app && rsync -r --exclude 'node_modules' ./server/* ./.deploy",
-    "download-definition-images": "tsx ./src/download-definition-images.ts",
     "build": "tsc -v",
     "build:staging": "tsc && vite build --mode staging",
+    "deploy:prepare": "rm -rf ./.deploy && mkdir ./.deploy && cp -r ./dist ./.deploy/app && rsync -r --exclude 'node_modules' ./server/* ./.deploy",
     "dev": "vite",
+    "download-definition-images": "tsx ./src/download-definition-images.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --fix --max-warnings 0",
     "lint-staged": "lint-staged",
     "prepare": "husky install",
