--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
   "name": "homepage-jana-goellner",
   "packageManager": "pnpm@9.13.0",
   "scripts": {
-    "build": "tsc -v",
-    "build:staging": "tsc && vite build --mode staging",
+    "build": "tsc && vite build",
     "deploy:prepare": "rm -rf ./.deploy && mkdir ./.deploy && cp -r ./dist ./.deploy/app && rsync -r --exclude 'node_modules' ./server/* ./.deploy",
     "dev": "vite",
     "download-definition-images": "tsx ./src/download-definition-images.ts",
