fix(ci): copy path

--- a/.github/workflows/build-depoly.yml
+++ b/.github/workflows/build-depoly.yml
@@ -19,7 +19,6 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm run deploy:prepare
-      - run: cd .deploy
 
       - name: copy file via ssh key
         uses: appleboy/scp-action@v0.1.7
@@ -28,5 +27,6 @@ jobs:
           username: ${{ secrets.SCP_USERNAME }}
           key: ${{ secrets.SCP_KEY }}
           port: ${{ secrets.SCP_PORT }}
-          source: "./**/*"
+          source: ".deploy/**"
+          overwrite: true
           target: /home/bitnami/projects/hebamme-jana-goellner
