--- a/.github/workflows/build-depoly.yml
+++ b/.github/workflows/build-depoly.yml
@@ -27,6 +27,7 @@ jobs:
           username: ${{ secrets.SCP_USERNAME }}
           key: ${{ secrets.SCP_KEY }}
           port: ${{ secrets.SCP_PORT }}
-          source: ".deploy/**"
+          source: .deploy
+          strip_components: 1
           overwrite: true
           target: /home/bitnami/projects/hebamme-jana-goellner
